--- a/home/home.css
+++ b/home/home.css
@@ -28,6 +28,13 @@ a {
 }
 
 .header {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  right: 0;
   padding: 10px 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,6 +46,18 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header:hover {
+  background-color: white;
+}
+
+.header:hover .nav .menu li a {
+  color: black;
+}
+
+.header:hover .logo h1 {
+  color: black;
 }
 
 .header .nav {
@@ -77,6 +96,9 @@ a {
 }
 
 .header .nav .menu li a {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: white;
   display: block;
   padding: 10px 10px;
 }
@@ -88,7 +110,98 @@ a {
 }
 
 .header .logo h1 {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
   text-align: center;
+  color: white;
+}
+
+.slidershow {
+  width: 100%;
+  height: 800px;
+  overflow: hidden;
+  position: relative;
+  z-index: 9;
+}
+
+.slidershow .slides {
+  width: 500%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slidershow .slides input[name="bottom"] {
+  position: absolute;
+  visibility: hidden;
+}
+
+.slidershow .slides #bottom_1:checked ~ .s1 {
+  margin-left: 0;
+}
+
+.slidershow .slides #bottom_2:checked ~ .s1 {
+  margin-left: -20%;
+}
+
+.slidershow .slides #bottom_3:checked ~ .s1 {
+  margin-left: -40%;
+}
+
+.slidershow .slide {
+  position: relative;
+  cursor: pointer;
+  width: 20%;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+.slidershow .slide.s2 h1 {
+  width: 100%;
+}
+
+.slidershow .slide h1 {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 90px;
+  color: white;
+}
+
+.slidershow .slide img {
+  width: 100%;
+  height: 100%;
+}
+
+.slidershow .bar {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #fff;
+  border-radius: 30px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.slidershow .bar:hover {
+  background: #fff;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  border: 2px solid red;
+}
+
+.slidershow .navigation {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .main-content .col-3 {
