--- a/home/home.scss
+++ b/home/home.scss
@@ -27,6 +27,29 @@ a {
 }
 
 .header {
+    transition: all 0.3s;
+    &:hover {
+        background-color: white;
+        .nav {
+            .menu {
+                li {
+                    a {
+                        color: black;
+                    }
+                }
+            }
+        }
+        .logo {
+            h1 {
+                color: black;
+            }
+        }
+    }
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    right: 0;
     padding: 10px 30px;
     display: flex;
     flex-direction: row;
@@ -44,6 +67,8 @@ a {
         .menu {
             li {
                 a {
+                    transition: all 0.3s;
+                    color: white;
                     display: block;
                     padding: 10px 10px;
                 }
@@ -55,8 +80,80 @@ a {
     .logo {
         flex-grow: 6;
         h1 {
+            transition: all 0.3s;
             text-align: center;
+            color: white;
         }
+    }
+}
+
+.slidershow {
+    width: 100%;
+    height: 800px;
+    overflow: hidden;
+    position: relative;
+    z-index: 9;
+    .slides {
+        input[name="bottom"] {
+            position: absolute;
+            visibility: hidden;
+        }
+        width: 500%;
+        height: 100%;
+        display: flex;
+        #bottom_1:checked~.s1 {
+            margin-left: 0;
+        }
+        #bottom_2:checked~.s1 {
+            margin-left: -20%;
+        }
+        #bottom_3:checked~.s1 {
+            margin-left: -40%;
+        }
+    }
+    .slide {
+        position: relative;
+        cursor: pointer;
+        width: 20%;
+        transition: 0.6s;
+        &.s2 {
+            h1 {
+                width: 100%;
+            }
+        }
+        h1 {
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 90px;
+            color: white;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .bar {
+        width: 20px;
+        height: 20px;
+        border: 2px solid #fff;
+        border-radius: 30px;
+        margin: 10px;
+        cursor: pointer;
+        &:hover {
+            background: #fff;
+            transition: 0.6s;
+            border: 2px solid red;
+        }
+    }
+    .navigation {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
     }
 }
 
